# browser-screenshot-service

./: pyproject.toml
.github/workflows/: builds.yml
browser_screenshot_service/: snapapi.py
