[tool.poetry]
name = "browser-screenshot-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
responder = "^2.0.7"
selenium = "^4.18.1"
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest-ruff = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
